added user management

--- a/public/src/templates/tasks.html
+++ b/public/src/templates/tasks.html
@@ -29,4 +29,6 @@ Search: <input type="text" ng-model="search.name">
 	</li>
 </ul>
 
-<a href = "#/publishers">Manage Users</a>
+<a href = "#/users">Manage Users</a>
+<a href = "#/tasks">Manage Tasks</a>
+<a href = "#/publishers">Manage Publishers</a>
