--- a/public/src/templates/publishers.html
+++ b/public/src/templates/publishers.html
@@ -8,4 +8,6 @@ Search: <input type="text" ng-model="search.name">
 	</li>
 </ul>
 
+<a href = "#/users">Manage Users</a>
 <a href = "#/tasks">Manage Tasks</a>
+<a href = "#/publishers">Manage Publishers</a>
