--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -1,5 +1,3 @@
-<form action="/auth" method="post">
-	<input placeholder="username" type="text" name="username" />
-	<input placeholder="********" type="password" name="password" />
-	<input type="submit" value="Login"/>
-</form>
+<input placeholder="username" type="text" name="username" />
+<input placeholder="********" type="password" name="password" />
+<input type="submit" value="Login" ng-click = "login();"/>
