--- a/public/src/templates/users.html
+++ b/public/src/templates/users.html
@@ -7,6 +7,7 @@
 	<li ng-repeat="user in users">
 	
 		<a href="#/user/{{user._id}}">{{user.username}}, {{user.email}}, {{user.password}}</a> 
+		<button ng-click = "update($index);">update</button>
 		<button ng-click = "remove($index);">delete</button>
 		
 	</li>
