--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -1,3 +1,3 @@
-<input placeholder="username" type="text" name="username" />
-<input placeholder="********" type="password" name="password" />
+<input placeholder="username" type="text" ng-model="username" />
+<input placeholder="********" type="password" ng-model="password" />
 <input type="submit" value="Login" ng-click = "login();"/>
