added token to headers, added auth check on restricted endpoints, added login redirect, added logout, added auth check redirect

--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -1,3 +1,5 @@
 <input placeholder="username" type="text" ng-model="username" />
 <input placeholder="********" type="password" ng-model="password" />
 <input type="submit" value="Login" ng-click = "login();"/>
+
+<span>{{error}}</span>
