--- a/public/src/templates/taskDetails.html
+++ b/public/src/templates/taskDetails.html
@@ -1,3 +1,7 @@
 <h1>{{ task.name }}</h1>
 completed: <input type="checkbox" ng-model="task.completed" />
 note: <textarea>{{ task.note }}</textarea>
+
+<br />
+
+<button ng-click = "logout();">logout</button>
