--- a/public/src/templates/tasks.html
+++ b/public/src/templates/tasks.html
@@ -32,3 +32,7 @@ Search: <input type="text" ng-model="search.name">
 <a href = "#/users">Manage Users</a>
 <a href = "#/tasks">Manage Tasks</a>
 <a href = "#/publishers">Manage Publishers</a>
+
+<br />
+
+<button ng-click = "logout();">logout</button>
