--- a/public/src/templates/users.html
+++ b/public/src/templates/users.html
@@ -1,4 +1,4 @@
-<input placeholder="username" type="text" ng-model="username"/>
+New user <input placeholder="username" type="text" ng-model="username"/>
 <input placeholder="email" type="text" ng-model="email"/>
 <input placeholder="********" type="password" ng-model="password"/>
 <input type="submit" value="Sign Up" ng-click = "signup();"/>
@@ -16,3 +16,7 @@
 <a href = "#/users">Manage Users</a>
 <a href = "#/tasks">Manage Tasks</a>
 <a href = "#/publishers">Manage Publishers</a>
+
+<br />
+
+<button ng-click = "logout();">logout</button>
