--- a/public/src/templates/publishers.html
+++ b/public/src/templates/publishers.html
@@ -11,3 +11,7 @@ Search: <input type="text" ng-model="search.name">
 <a href = "#/users">Manage Users</a>
 <a href = "#/tasks">Manage Tasks</a>
 <a href = "#/publishers">Manage Publishers</a>
+
+<br />
+
+<button ng-click = "logout();">logout</button>
